unit test matching3