@@ -1,104 +1,88 @@
 package org.fit.ssapp.st;
 
-import org.fit.ssapp.ss.smt.Matches;
-
-import org.fit.ssapp.ss.smt.preference.impl.list.TripletPreferenceList;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-
-import java.util.Set;
-
 import static org.junit.jupiter.api.Assertions.*;
 
+import org.fit.ssapp.ss.smt.Matches;
+import org.fit.ssapp.ss.smt.preference.impl.list.TwoSetPreferenceList;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
+import java.util.*;
+
 class MatchesTest {
-    private Matches matches;
-    private TripletPreferenceList tripletPreferenceList;
 
-    @BeforeEach
-    void setUp() {
-        int size = 11;
-        int padding = 1;
-        matches = new Matches(10);
-        tripletPreferenceList = new TripletPreferenceList(size, padding);
+    // 1. Select New Match
+    @ParameterizedTest
+    @CsvSource({
+            "0,1,2,1",
+            "1,2,3,2",
+            "2,3,4,3"
+    })
+    void testSelectNewMatch(int targetIndividual, int newIndividual, int leastPreferred, int expected) {
+        Matches matches = new Matches(5);
+        matches.addMatch(targetIndividual, leastPreferred);
+        matches.addMatch(targetIndividual, newIndividual);
 
-        double[] scores = {0.0, 3.1, 1.5, 4.0, 2.2, 5.8, 6.3, 7.7, 8.5, 9.1, 10.0};
-        int[] positions = {0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10};
+        Set<Integer> currentMatches = matches.getSetOf(targetIndividual);
+        currentMatches.add(newIndividual);
 
-        tripletPreferenceList.addArray(scores, positions);
+        Integer result = Collections.min(currentMatches);
+        assertEquals(expected, result, "The least preferred individual should be " + expected);
     }
 
-    @Test
-    void testSelectNewMatch() {
-        matches.addMatch(0, 1);
-        matches.addMatch(0, 2);
-        matches.addMatch(0, 3);
-        matches.addMatch(0, 4);
-        matches.addMatch(0, 5);
-        matches.addMatch(0, 6);
-        matches.addMatch(0, 7);
+    // 2. Match Both Ways
+    @ParameterizedTest
+    @CsvSource({
+            "0,1",
+            "1,2",
+            "2,3"
+    })
+    void testMatchBothWays(int node1, int node2) {
+        Matches matches = new Matches(5);
+        matches.addMatchBi(node1, node2);
 
-        Set<Integer> matchedSet = matches.getSetOf(0);
-
-        assertTrue(matchedSet.contains(1));
-        assertTrue(matchedSet.contains(2));
-        assertTrue(matchedSet.contains(3));
-        assertTrue(matchedSet.contains(4));
-        assertTrue(matchedSet.contains(5));
-        assertTrue(matchedSet.contains(6));
-        assertTrue(matchedSet.contains(7));
-        assertFalse(matchedSet.contains(8));
+        assertTrue(matches.isMatched(node1, node2), "Node1 and Node2 should be matched both ways");
     }
 
-    @Test
-    void testMatchBothWays() {
-        matches.addMatchBi(1, 2);
-        matches.addMatchBi(3, 4);
-        matches.addMatchBi(5, 6);
-        matches.addMatchBi(7, 8);
+    // 3. Check Full
+    @ParameterizedTest
+    @CsvSource({
+            "0,2,1,false",
+            "1,2,2,true",
+            "2,3,3,false"
+    })
+    void testCheckFull(int targetNode, int targetNodeCapacity, int matchesToAdd, boolean expected) {
+        Matches matches = new Matches(5);
+        for (int i = 0; i < matchesToAdd; i++) {
+            matches.addMatch(targetNode, i + 10);  // Adding unique nodes to avoid duplication
+        }
 
-        assertTrue(matches.isMatched(1, 2));
-        assertTrue(matches.isMatched(2, 1));
-        assertTrue(matches.isMatched(3, 4));
-        assertTrue(matches.isMatched(5, 6));
-        assertTrue(matches.isMatched(7, 8));
-
-        assertTrue(matches.getSetOf(1).contains(2));
-        assertTrue(matches.getSetOf(2).contains(1));
-        assertTrue(matches.getSetOf(3).contains(4));
-        assertTrue(matches.getSetOf(4).contains(3));
-        assertTrue(matches.getSetOf(5).contains(6));
-        assertTrue(matches.getSetOf(6).contains(5));
+        assertEquals(expected, matches.isFull(targetNode, targetNodeCapacity), "The node should be full: " + expected);
     }
 
-    @Test
-    void testCheckFull() {
-        matches.addMatch(3, 0);
-        matches.addMatch(3, 1);
-        matches.addMatch(3, 2);
-        matches.addMatch(4, 5);
-        matches.addMatch(4, 6);
-        matches.addMatch(4, 7);
+    // Unit Test cho getLeastNode
+    @ParameterizedTest
+    @CsvSource({
+            "0,5,1,2,3,1",
+            "0,5,2,3,4,2",
+            "0,5,3,4,5,3"
+    })
+    void testGetLeastNode(int set, int newNode, int node1, int node2, int node3, int expected) {
+        // Tạo một đối tượng TwoSetPreferenceList với padding = 0
+        TwoSetPreferenceList preferenceList = new TwoSetPreferenceList(6, 0);
 
-        assertTrue(matches.isFull(3, 3));
-        assertFalse(matches.isFull(3, 4));
-        assertTrue(matches.isFull(4, 3));
-    }
+        // Thêm các score vào preferenceList
+        preferenceList.add(1.0); // Node 0
+        preferenceList.add(0.8); // Node 1
+        preferenceList.add(0.5); // Node 2
+        preferenceList.add(0.3); // Node 3
+        preferenceList.add(0.2); // Node 4
+        preferenceList.add(0.1); // Node 5
 
-    @Test
-    void testGetLeastNode() {
-        Set<Integer> currentNodes = Set.of(2, 3, 5);
+        // Tạo danh sách các node hiện tại
+        Set<Integer> currentNodes = new HashSet<>(Arrays.asList(node1, node2, node3));
 
-        int result = tripletPreferenceList.getLeastNode(0, 4, currentNodes);
-
-        assertEquals(2, result);
-    }
-
-    @Test
-    void testGetLeastNodeWhenCurrentNodesIsEmpty() {
-        Set<Integer> currentNodes = Set.of();
-
-        int result = tripletPreferenceList.getLeastNode(0, 4, currentNodes);
-
-        assertEquals(4, result); // Khi không có node nào, kết quả là chính newNode
+        // Gọi phương thức getLeastNode và kiểm tra kết quả
+        int result = preferenceList.getLeastNode(set, newNode, currentNodes);
+        assertEquals(expected, result, "The least preferred node should be " + expected);
     }
 }
